--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ function clickedOn(idnum,childnum) {
 }
 </script>
 </head><body>
-<b id="clicktext" style="position:absolute;left:10px;top:10px;color:black;font-family:sans-serif;visibility:visible">Click your favorites!</b>
+<b id="clicktext" style="position:absolute;left:10px;top:10px;color:black;font-family:sans-serif;visibility:visible">Clique nos seus livros favoritos!</b>
 <!-- <a id="lock" style="position:absolute;left:30px;top:10px;color:black;font-family:sans-serif;visibility:hidden" href="javascript:void(0)"> -->
   <form method="get" action="/lock2" id="f" onsubmit="return validateForm();">
     <b id="locktext" style="position:absolute;left:30px;top:10px;color:black;font-family:sans-serif;visibility:hidden">
