--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <link rel="icon" href="favicon.ico">
     <script type="text/javascript" async="" src="arquivos/analytics.js"></script><script type="text/javascript" src="arquivos/sharethis.js"></script>
     <script async="" src="arquivos/js.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116068061-2"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-87949-16');
+      gtag('config', 'UA-116068061-2');
     </script>
     <script>
     function clickedOn(idnum,childnum) {
