--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
       }
       var anyblanks = 0;
-      var passer = 'http://disneybracket.com/lock2?q=';
+      var passer = '';
       passer = '';
       for (var i = 33; i < 64; i++) {
         if (document.getElementById("img"+i).src.substr(-9,9) == 'pixel.png') {
