--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-    <title>Batalha de livros King</title>
+    <title>Batalha de livros do King | Editora Suma</title>
     <link rel="icon" href="favicon.ico">
     <script type="text/javascript" async="" src="arquivos/analytics.js"></script><script type="text/javascript" src="arquivos/sharethis.js"></script>
     <script async="" src="arquivos/js.js"></script>
